Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-23583

Propagate compression failure during block reclaim to upper layers

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.6.3, 5.0.0
    • 4.5.0, 4.5.1, 4.6.0, 5.0.0
    • forestdb
    • None
    • Untriaged
    • Unknown

    Description

      If compression/decompression fails during block reclaiming, corrupted data will be stored internally, and then it causes crash in the next round block reuse or file re-open.

      We should handle any kinds of errors around block reclaiming. If error happens, it should be propagated to upper layers so as to avoid the situation that block reuse logic is running with corrupted data.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jung-sang Jung-Sang Ahn (Inactive)
            jung-sang Jung-Sang Ahn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty