[BP] MB-23583: Gracefully handle errors during block reclaiming

* realloc() call or decompression may cause error in block reclaiming
task, but those errors do not propagate to the upper layer so it causes
crash later.

* Immediately stop block reclaiming task if any kinds of errors happens.

Change-Id: I35ccace0afc03102fa55b889c148f4d4d65d2fbe
Reviewed-on: http://review.couchbase.org/77072
Reviewed-by: Jung-Sang Ahn <jungsang.ahn@gmail.com>
Tested-by: Jung-Sang Ahn <jungsang.ahn@gmail.com>